# Hybridrag-Sergio

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/base/: embeddings.yaml  llm.yaml  pipeline.yaml
configs/domains/generic/: extraction_schema.yaml  normalization.yaml  ontology.yaml  relations.yaml  semantic_definitions.yaml
configs/domains/offers/: eval_rubric.yaml  extraction_schema.yaml  normalization.yaml  ontology.yaml  relations.yaml  semantic_definitions.yaml
data/samples/: oferta_ejemplo.md
docs/: 00-indice.md  01-arquitectura.md  02-configuracion-por-dominio.md  03-evaluacion.md  04-decisiones-y-limitaciones.md  CHANGELOG.md  PHASES.md  README.md
scripts/: check_connection.py  create_schema.py  evaluate.py  ingest.py  query.py  reset_neo4j.py
src/ragkg/config/: loader.py
src/ragkg/embeddings/: embedder.py  vector_index.py
src/ragkg/evaluation/: __init__.py  dataset.py  judge.py  metrics.py  report.py  runner.py  test_queries.yaml  test_queries_full.yaml
src/ragkg/extraction/: normalizer.py  ontology_extractor.py  validators.py
src/ragkg/generation/: answer_builder.py
src/ragkg/graph/: neo4j_client.py  queries.py  schema.py  upsert.py
src/ragkg/ingestion/: chunker.py  loaders.py  pipeline.py
src/ragkg/retrieval/: __init__.py  graph_retriever.py  hybrid_retriever.py  keyword_retriever.py  rrf.py  structured_query.py  vector_retriever.py
tests/: test_config_loader.py  test_evaluation.py  test_extraction.py  test_hybrid_search.py  test_normalization.py  test_retrieval.py
