[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragkg"
version = "0.1.0"
description = "Plataforma agnóstica de GraphRAG con ontologías, Neo4j y embeddings"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RAG-KG Team" }]

dependencies = [
    "neo4j>=5.20",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    # Loaders de documentos
    "pypdf>=4.0",
    "python-docx>=1.1",
    "markdown>=3.6",
    # SDK usado para OpenAI Y Groq (Groq es OpenAI-compatible)
    "openai>=1.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
ragkg-ingest = "ragkg.cli.ingest:main"
ragkg-query = "ragkg.cli.query:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
